Navbar and side-bar menu

--- a/signup_user.html
+++ b/signup_user.html
@@ -32,42 +32,38 @@
 				<form class=" input-field col s11">
 					<input id="first_name" type="text" class="validate">
 					<label for="first_name">Nombre y apellido</label>
-				</div>
-			</form>
-		</div>
-		<!-- input email -->
-		<div class="row">
-			<div class="col s1">
-				<i class="material-icons">email</i>
-			</div>
-			<div class="input-field col s11">
-				<input id="email" type="email" class="validate">
-				<label for="email">Email</label>
-			</div>
-		</div>
-	</div>
-</section>
-<section>
-	<!-- input term of service -->
-	<div class="container terminos">
-		<div class="row">
-			<form class="col s12">
-				<div class="input-field">
-					<p><input type="checkbox" class="filled-in chekbox" id="filled-in-box" checked="checked">
-						<label for="filled-in-box">I agree to Lyft's</label></p>
-						<p><a href="#!" class="termof">Term of Service</a></p>    
-					</div>
 				</form>
+			</div>
+			<!-- input email -->
+			<div class="row">
+				<div class="col s1">
+					<i class="material-icons" id=varemail>email</i>
+				</div>
+				<div class="input-field col s11">
+					<input id="email" type="email" class="validate">
+					<label for="email">Email</label>
+				</div>
+			</div>
+			<div class="row">
+				<form class="col s12 center-align">
+					<div class="input-field">
+						<p><input type="checkbox" class="filled-in chekbox" id="filled-in-box" checked="checked">
+							<label for="filled-in-box">I agree to Lyft's</label></p>
+							<p><a href="#!" class="termof">Term of Service</a></p>    
+						</div>
+					</form>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12">
+					<a class="waves-effect waves-light btn-large pink lighten-1 btnnext2 col s12" href="maps.html"> Next </a>
+				</div>
 			</div>
 		</div>
 	</section>
-	<footer class="sectnext">
-			<div class="row">
-				<a class="waves-effect waves-light btn-large pink lighten-1 btnnext col s12" href="maps.html"> Next </a>
-			</footer>
-<!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
-<script type="text/javascript" src="js/materialize.js"></script>
-<script type="text/javascript" src="js/signup_user.js"></script>
-</body>
-</html>
+			<!--Import jQuery before materialize.js-->
+			<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
+			<script type="text/javascript" src="js/materialize.js"></script>
+			<script type="text/javascript" src="js/signup_user.js"></script>
+		</body>
+		</html>
