--- a/maps.html
+++ b/maps.html
@@ -5,79 +5,107 @@
 	<title>Lyft</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta charset="utf-8">
-	<link rel="icon" type="image/ico" href="img/fav.png"> 
 	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.css">
 	<link href='http://fonts.googleapis.com/css?family=Rosario:400,700' rel='stylesheet' type='text/css'>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/cssmapa.css">
-	<link rel="stylesheet" type="text/css" href="css/mapa.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+	<link rel="stylesheet" type="text/css" href="css/maps.css">
 </head>
 <body>
-	<div class="contenedor">
-		<!--Sidenav menu -->
-		
-		<!--Localizacion-->
-		<div id='ubicacion'></div>
-		<script type="text/javascript">
-			if (navigator.geolocation) {
-				navigator.geolocation.getCurrentPosition(mostrarUbicacion);
-			} else {alert("¡Error! Este navegador no soporta la Geolocalización.");}
-			function mostrarUbicacion(position) {
-				var times = position.timestamp;
-				var latitud = position.coords.latitude;
-				var longitud = position.coords.longitude;
-				var altitud = position.coords.altitude; 
-				var exactitud = position.coords.accuracy; 
-				var div = document.getElementById("ubicacion");
-				function refrescarUbicacion() { 
-					navigator.geolocation.watchPosition(mostrarUbicacion);} 
-				</script>
-				<div id="demo"></div>
-				<div id="mapholder"></div>
-				<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-				<script type="text/javascript">
-					var x=document.getElementById("demo");
-					function cargarmap(){
-						navigator.geolocation.getCurrentPosition(showPosition,showError);
-						function showPosition(position){
-							lat=position.coords.latitude;
-							lon=position.coords.longitude;
-							latlon=new google.maps.LatLng(lat, lon)
-							mapholder=document.getElementById('mapholder')
-							mapholder.style.height='100vh';
-							mapholder.style.width='500wh';
-							var myOptions={
-								center:latlon,zoom:15,
-								mapTypeId:google.maps.MapTypeId.ROADMAP,
-								mapTypeControl:false,
-								navigationControlOptions:{style:google.maps.NavigationControlStyle.SMALL}
-							};
-							var map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
-							var marker=new google.maps.Marker({position:latlon,map:map,title:"You are here!"});
+	<!--Navbar menu -->	
+	<nav class="barralogo">
+		<div class="nav-wrapper">
+			<a href="#" class="brand-logo center">
+				<img class="img-logo" src="img/logofucsia.png">
+			</a>
+			<ul id="nav-mobile" class="rigth hide-on-med-and-down">
+				<li><a href="#!"><i class="material-icons">redeem</i></a></li>
+			</ul>
+			<!--Side-bar menu -->
+			<ul id="slide-out" class="side-nav">
+				<li><div class="userView">
+					<div class="background">
+						<img src="">
+					</div>
+					<a href="#!user"><img class="circle content-center" src="img/user.png"></a>
+					<a href="#!name"><span class="white-text name">Mercedes</span></a>
+					<a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+				</div></li>
+				<li><div class="divider"></div></li>
+				<li><a href="#!"><i class="material-icons">add_location</i>Home</a></li>
+				<li><a href="#!"><i class="material-icons">card_giftcard</i>Free Rides</a></li>
+				<li><a href="#!"><i class="material-icons">restore</i>Ride History</a></li>
+				<li><a href="#!"><i class="material-icons">credit_card</i>Payment</a></li>
+				<li><a href="#!"><i class="material-icons">help</i>Help</a></li>
+				<li><a href="#!"><i class="material-icons">settings</i>Settings</a></li>
+				<li><a class="waves-effect driver" href="#!"><i class="material-icons">drive_eta</i> Sign Up to Drive</a></li>
+			</ul>
+			<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons iconoaccount">account_circle</i></a>
+
+		</div>
+	</nav>
+	<!--Localizacion-->
+	<div id='ubicacion'></div>
+	<script type="text/javascript">
+		if (navigator.geolocation) {
+			navigator.geolocation.getCurrentPosition(mostrarUbicacion);
+		} else {alert("¡Error! Este navegador no soporta la Geolocalización.");}
+		function mostrarUbicacion(position) {
+			var times = position.timestamp;
+			var latitud = position.coords.latitude;
+			var longitud = position.coords.longitude;
+			var altitud = position.coords.altitude; 
+			var exactitud = position.coords.accuracy; 
+			var div = document.getElementById("ubicacion");
+			function refrescarUbicacion() { 
+				navigator.geolocation.watchPosition(mostrarUbicacion);} 
+			</script>
+			<div id="demo"></div>
+			<div id="mapholder"></div>
+			<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+			<script type="text/javascript">
+				var x=document.getElementById("demo");
+				function cargarmap(){
+					navigator.geolocation.getCurrentPosition(showPosition,showError);
+					function showPosition(position){
+						lat=position.coords.latitude;
+						lon=position.coords.longitude;
+						latlon=new google.maps.LatLng(lat, lon)
+						mapholder=document.getElementById('mapholder')
+						mapholder.style.height='100vh';
+						mapholder.style.width='500wh';
+						var myOptions={
+							center:latlon,zoom:15,
+							mapTypeId:google.maps.MapTypeId.ROADMAP,
+							mapTypeControl:false,
+							navigationControlOptions:{style:google.maps.NavigationControlStyle.SMALL}
+						};
+						var map=new google.maps.Map(document.getElementById("mapholder"),myOptions);
+						var marker=new google.maps.Marker({position:latlon,map:map,title:"You are here!"});
+					}
+					function showError(error){
+						switch(error.code){
+							case error.PERMISSION_DENIED:
+							x.innerHTML="Denegada la peticion de Geolocalización en el navegador."
+							break;
+							case error.POSITION_UNAVAILABLE:
+							x.innerHTML="La información de la localización no esta disponible."
+							break;
+							case error.TIMEOUT:
+							x.innerHTML="El tiempo de petición ha expirado."
+							break;
+							case error.UNKNOWN_ERROR:
+							x.innerHTML="Ha ocurrido un error desconocido."
+							break;
 						}
-						function showError(error){
-							switch(error.code){
-								case error.PERMISSION_DENIED:
-								x.innerHTML="Denegada la peticion de Geolocalización en el navegador."
-								break;
-								case error.POSITION_UNAVAILABLE:
-								x.innerHTML="La información de la localización no esta disponible."
-								break;
-								case error.TIMEOUT:
-								x.innerHTML="El tiempo de petición ha expirado."
-								break;
-								case error.UNKNOWN_ERROR:
-								x.innerHTML="Ha ocurrido un error desconocido."
-								break;
-							}
-						}}
-						cargarmap();
-					</script>
+					}}
+					cargarmap();
+				</script>
+			</div>
 
-
-					<!--Import jQuery before materialize.js-->
-					<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
-					<script type="text/javascript" src="js/materialize.js"></script>
-					<script type="text/javascript" src="js/signup_user.js"></script>
-				</body>
-				</html>
+			<!--Import jQuery before materialize.js-->
+			<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
+			<script type="text/javascript" src="js/materialize.js"></script>
+			<script type="text/javascript" src="js/maps.js"></script>
+		</body>
+		</html>
